--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,13 @@
     android:orientation="vertical"
     tools:context="com.makedream.jawasi.ui.activity.MainActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.Toolbar>
+
     <com.flyco.tablayout.SlidingTabLayout
         android:id="@+id/tl"
         tl:tl_indicator_color="#2C97DE"
